SCRUM-579: - moved page editor styles from adminInterface to magnolia-tenplating-editor module. - Used different css class names from existing styles to avoid conflicts. - Fixed some margin issues. - Made area label a span and used title attribute to show whole text on mouse hovering when text is truncated due to excessive length
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@50991 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
+++ b/magnolia-module-admininterface/src/main/resources/mgnl-resources/admin-css/controls.css
@@ -238,61 +238,3 @@ td.smothBarLabel {
     font: 11px verdana, arial, helvetica, sans-serif;
 }
 
-
-/*
-* new styles (since Magnolia 4.5)
-*/
-.mgnlAreaControlBar {
-    background-color: #6BABFB;
-    height: 20px;
-    width: 100% !important;
-    clear: both;
-}
-
-button.mgnlControlButton {
-    height: 18px;
-    padding: 2px!important;
-    margin: 1px 1px 0px 1px;
-    background-color: transparent;
-    border-color: #ADC97B #396101 #396101 #ADC97B;
-    border-style: solid;
-    border-width: 1px;
-    line-height: 10px; /*FF needs it*/
-}
-
-button.mgnlControlButton_PUSHED {
-    height: 18px;
-    padding: 2px !important;
-    background-color: #86AC41 !important;
-    border-color: #396101 #396101 #ADC97B #ADC97B;
-    border-style: solid;
-    border-width: 1px;
-}
-
-.mgnlAreaControlBar, .mgnlAreaControlBar button.mgnlControlButton {
-    border-color: #B6D6FE #36567E #36567E #B6D6FE;
-    border-style: solid;
-    border-width: 1px;
-}
-
-.mgnlAreaControlBar button.mgnlControlButton_PUSHED {
-    background-color: #7BABFF !important;
-    border-color: #36567E #36567E #B6D6FE #B6D6FE;
-    border-style: solid;
-    border-width: 1px;
-}
-/* TODO maybe the properties to avoid long text breaking the layout (float, overflow, width, text-overflow) should be hardcoded into GWT code? */
-.mgnlAreaLabel {
-	background: transparent none !important;
-    float: left;
-    font-family: Verdana, sans-serif !important;
-    font-size: 12px;
-    color: #F0F2E6 !important;
-    white-space: nowrap;
-    margin-top: 2px !important;
-    margin-left: 2px !important;
-    padding: 0px !important;
-    overflow: hidden;
-    width: 30% !important;
-    text-overflow: ellipsis; /*FF does not support this. Maybe it will in version 7*/
-}
